sk8s/yaml/alert-to-pubsub.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: alert-to-pubsub
  name: alert-to-pubsub
spec:
  ports:
    - name: metrics
      port: 20000
    - name: http
      port: 8000
  selector:
    app: alert-to-pubsub
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: alert-to-pubsub
spec:
  replicas: 1
  selector:
    matchLabels:
      app: alert-to-pubsub
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: alert-to-pubsub
      annotations:
        prometheus.io.scrape: "true"
        prometheus.io.port: "20000"
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: kubernetes.io/hostname
                operator: In
                values:
                - rack4-shelf1-master
      automountServiceAccountToken: false
      imagePullSecrets:
        - name: gcr-io-skia-public
      securityContext:
        runAsUser: 2000 # aka skia
        fsGroup: 2000   # aka skia
      containers:
        - name: alert-to-pubsub
          image: gcr.io/skia-public/alert-to-pubsub:2019-04-01T14_18_01Z-kjlubick-2e9ea67-clean
          args:
            - "--location=skolo-rack4"
            - "--logtostderr"
            - "--port=:8000"
            - "--prom_port=:20000"
          ports:
            - containerPort: 20000
            - containerPort:  8000
          volumeMounts:
            - name: skia-alert-to-pubsub-sa
              mountPath: /var/secrets/google
          resources:
            requests:
              memory: "100Mi"
              cpu: "50m"
          readinessProbe:
            httpGet:
              path: /healthz
              port: 8000
            initialDelaySeconds: 1
            periodSeconds: 3
      volumes:
        - name: skia-alert-to-pubsub-sa
          secret:
            secretName: skia-alert-to-pubsub
