sk8s/yaml/metadata.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: metadata
  name: metadata
spec:
  ports:
    - name: http
      port: 80
      targetPort: 8000
  selector:
    name: metadata
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: metadata
spec:
  selector:
    matchLabels:
      name: metadata
  template:
    metadata:
      labels:
        name: metadata
      annotations:
        prometheus.io.scrape: "true"
        prometheus.io.port: "20000"
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: kubernetes.io/hostname
                operator: In
                values:
                - jumphost
      automountServiceAccountToken: false
      securityContext:
        runAsUser: 2000 # aka skia
        fsGroup: 2000   # aka skia
      imagePullSecrets:
        - name: gcr-io-skia-public
      containers:
        - name: metadata
          image: gcr.io/skia-public/metadata:2019-11-08T18_54_43Z-jcgregorio-253a114-dirty
          args:
            - "--logtostderr=true"
            - "--conf=/etc/metadata-server/metadata-rpi2.json5"
            - "--port=:8000"
            - "--prom_port=:20000"
          ports:
            - containerPort: 20000
            - containerPort: 8000
          volumeMounts:
            - name: skolo-service-account-secrets
              mountPath: /etc/service-accounts
          readinessProbe:
            httpGet:
              path: /healthz
              port: 8000
            initialDelaySeconds: 1
            periodSeconds: 3
      volumes:
        - name: skolo-service-account-secrets
          secret:
            secretName: skolo-service-accounts
