sk8s/yaml/prom.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus
spec:
  selector:
    app: prometheus
  type: NodePort
  ports:
    - port: 8000
      name: http
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prometheus
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prometheus
  template:
    metadata:
      labels:
        app: prometheus
      annotations:
        prometheus.io.scrape: "true"
        prometheus.io.port: "8000"
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: kubernetes.io/hostname
                operator: In
                values:
                - jumphost
      securityContext:
        runAsUser: 2000 # aka skia
        fsGroup: 2000   # aka skia
      serviceAccountName: prometheus
      automountServiceAccountToken: true
      containers:
        - name: prometheus
          image: prom/prometheus:v2.4.3
          args:
            - "--storage.tsdb.path=/mnt/prometheus/"
            - "--web.enable-lifecycle"
            - "--web.listen-address=:8000"
            - "--web.external-url=https://prom2.skia.org"
            - "--config.file=/etc/prometheus/prometheus.yml"
          ports:
            - containerPort: 8000
          volumeMounts:
            - name: prometheus-config-volume
              mountPath: /etc/prometheus/
            - name: prometheus-storage
              mountPath: /mnt/prometheus/
          resources:
            requests:
              memory: "1Gi"
              cpu: "1"
      volumes:
        - name: prometheus-config-volume
          configMap:
            defaultMode: 420
            name: prometheus-server-conf
        - name: prometheus-storage
          emptyDir: {}
